grammar/gen/SolidLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from grammar/SolidLangParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class SolidLangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		NAMESPACE=1, USING=2, FUNC=3, INTERFACE=4, STRUCT=5, ENUM=6, UNION=7, 
		VAR=8, CONST=9, STATIC=10, IF=11, ELSE=12, WHILE=13, FOR=14, FOREACH=15, 
		IN=16, MATCH=17, SWITCH=18, BREAK=19, CONTINUE=20, RETURN=21, DEFER=22, 
		WHERE=23, ASYNC=24, AWAIT=25, PLUS=26, MINUS=27, NOT=28, TILDE=29, STAR=30, 
		SLASH=31, MOD=32, EQEQ=33, NOTEQ=34, LT=35, GT=36, LE=37, GE=38, OROR=39, 
		ANDAND=40, AND=41, OR=42, CARET=43, SHL=44, SHR=45, EQ=46, PLUSEQ=47, 
		MINUSEQ=48, STAREQ=49, SLASHEQ=50, PERCENTEQ=51, ANDEQ=52, OREQ=53, CARETEQ=54, 
		SHLEQ=55, SHREQ=56, SCOPE=57, COLON=58, QUESTION=59, COMMA=60, DOT=61, 
		SEMI=62, EQARROW=63, MINUSRARROW=64, AT=65, LBRACE=66, RBRACE=67, LBRACKET=68, 
		RBRACKET=69, LPAREN=70, RPAREN=71, STRING_LITERAL=72, CHAR_LITERAL=73, 
		BOOL_LITERAL=74, NULL=75, INTEGER_LITERAL=76, FLOAT_LITERAL=77, ID=78, 
		WHITESPACE=79, Doc_comment=80, Line_comment=81;
	public const int
		RULE_program = 0, RULE_annotations = 1, RULE_annotation = 2, RULE_namespace_decl_stmt = 3, 
		RULE_namespace_path = 4, RULE_namespace_prefix = 5, RULE_using_decl_stmt = 6, 
		RULE_const_decl_stmt = 7, RULE_const_static_decl_stmt = 8, RULE_struct_decl_stmt = 9, 
		RULE_struct_fields = 10, RULE_struct_field = 11, RULE_union_decl_stmt = 12, 
		RULE_union_fields = 13, RULE_union_field = 14, RULE_enum_decl_stmt = 15, 
		RULE_enum_fields = 16, RULE_enum_field = 17, RULE_func_decl_stmt = 18, 
		RULE_func_decl_header = 19, RULE_func_parameters = 20, RULE_func_parameter = 21, 
		RULE_interface_decl_stmt = 22, RULE_interface_fields = 23, RULE_generic_params = 24, 
		RULE_generic_param = 25, RULE_where_clauses = 26, RULE_where_clause = 27, 
		RULE_type = 28, RULE_named_type = 29, RULE_func_type = 30, RULE_ref_type = 31, 
		RULE_pointer_type = 32, RULE_tuple_type = 33, RULE_array_type = 34, RULE_stmt = 35, 
		RULE_empty_stmt = 36, RULE_body_stmt = 37, RULE_assign_stmt = 38, RULE_assign_pseudo_expr = 39, 
		RULE_expr_stmt = 40, RULE_defer_stmt = 41, RULE_if_stmt = 42, RULE_while_stmt = 43, 
		RULE_for_stmt = 44, RULE_foreach_stmt = 45, RULE_foreach_vars = 46, RULE_switch_stmt = 47, 
		RULE_switch_cases = 48, RULE_switch_case = 49, RULE_switch_labels = 50, 
		RULE_switch_label = 51, RULE_break_stmt = 52, RULE_continue_stmt = 53, 
		RULE_return_stmt = 54, RULE_var_decl_pseudo_expr = 55, RULE_var_decl_stmt = 56, 
		RULE_static_decl_stmt = 57, RULE_expr = 58, RULE_conditional_expr = 59, 
		RULE_or_expr = 60, RULE_and_expr = 61, RULE_bit_or_expr = 62, RULE_bit_xor_expr = 63, 
		RULE_bit_and_expr = 64, RULE_eq_expr = 65, RULE_cmp_expr = 66, RULE_shift_expr = 67, 
		RULE_add_expr = 68, RULE_mul_expr = 69, RULE_unary_expr = 70, RULE_postfix_expr = 71, 
		RULE_postfix_suffix = 72, RULE_primary_expr = 73, RULE_meta_expr = 74, 
		RULE_meta_args = 75, RULE_meta_arg = 76, RULE_tuple_literal = 77, RULE_tuple_elements = 78, 
		RULE_struct_literal = 79, RULE_struct_literal_fields = 80, RULE_struct_literal_field = 81, 
		RULE_array_literal = 82, RULE_literal = 83, RULE_call_args = 84;
	public static readonly string[] ruleNames = {
		"program", "annotations", "annotation", "namespace_decl_stmt", "namespace_path", 
		"namespace_prefix", "using_decl_stmt", "const_decl_stmt", "const_static_decl_stmt", 
		"struct_decl_stmt", "struct_fields", "struct_field", "union_decl_stmt", 
		"union_fields", "union_field", "enum_decl_stmt", "enum_fields", "enum_field", 
		"func_decl_stmt", "func_decl_header", "func_parameters", "func_parameter", 
		"interface_decl_stmt", "interface_fields", "generic_params", "generic_param", 
		"where_clauses", "where_clause", "type", "named_type", "func_type", "ref_type", 
		"pointer_type", "tuple_type", "array_type", "stmt", "empty_stmt", "body_stmt", 
		"assign_stmt", "assign_pseudo_expr", "expr_stmt", "defer_stmt", "if_stmt", 
		"while_stmt", "for_stmt", "foreach_stmt", "foreach_vars", "switch_stmt", 
		"switch_cases", "switch_case", "switch_labels", "switch_label", "break_stmt", 
		"continue_stmt", "return_stmt", "var_decl_pseudo_expr", "var_decl_stmt", 
		"static_decl_stmt", "expr", "conditional_expr", "or_expr", "and_expr", 
		"bit_or_expr", "bit_xor_expr", "bit_and_expr", "eq_expr", "cmp_expr", 
		"shift_expr", "add_expr", "mul_expr", "unary_expr", "postfix_expr", "postfix_suffix", 
		"primary_expr", "meta_expr", "meta_args", "meta_arg", "tuple_literal", 
		"tuple_elements", "struct_literal", "struct_literal_fields", "struct_literal_field", 
		"array_literal", "literal", "call_args"
	};

	private static readonly string[] _LiteralNames = {
		null, "'namespace'", "'using'", "'func'", "'interface'", "'struct'", "'enum'", 
		"'union'", "'var'", "'const'", "'static'", "'if'", "'else'", "'while'", 
		"'for'", "'foreach'", "'in'", "'match'", "'switch'", "'break'", "'continue'", 
		"'return'", "'defer'", "'where'", "'async'", "'await'", "'+'", "'-'", 
		"'!'", "'~'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", 
		"'>='", "'||'", "'&&'", "'&'", "'|'", "'^'", "'<<'", "'>>'", "'='", "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", 
		"'::'", "':'", "'?'", "','", "'.'", "';'", "'=>'", "'->'", "'@'", "'{'", 
		"'}'", "'['", "']'", "'('", "')'", null, null, null, "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "NAMESPACE", "USING", "FUNC", "INTERFACE", "STRUCT", "ENUM", "UNION", 
		"VAR", "CONST", "STATIC", "IF", "ELSE", "WHILE", "FOR", "FOREACH", "IN", 
		"MATCH", "SWITCH", "BREAK", "CONTINUE", "RETURN", "DEFER", "WHERE", "ASYNC", 
		"AWAIT", "PLUS", "MINUS", "NOT", "TILDE", "STAR", "SLASH", "MOD", "EQEQ", 
		"NOTEQ", "LT", "GT", "LE", "GE", "OROR", "ANDAND", "AND", "OR", "CARET", 
		"SHL", "SHR", "EQ", "PLUSEQ", "MINUSEQ", "STAREQ", "SLASHEQ", "PERCENTEQ", 
		"ANDEQ", "OREQ", "CARETEQ", "SHLEQ", "SHREQ", "SCOPE", "COLON", "QUESTION", 
		"COMMA", "DOT", "SEMI", "EQARROW", "MINUSRARROW", "AT", "LBRACE", "RBRACE", 
		"LBRACKET", "RBRACKET", "LPAREN", "RPAREN", "STRING_LITERAL", "CHAR_LITERAL", 
		"BOOL_LITERAL", "NULL", "INTEGER_LITERAL", "FLOAT_LITERAL", "ID", "WHITESPACE", 
		"Doc_comment", "Line_comment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SolidLangParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SolidLangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SolidLangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SolidLangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Namespace_decl_stmtContext namespace_decl_stmt() {
			return GetRuleContext<Namespace_decl_stmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SolidLangParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Using_decl_stmtContext[] using_decl_stmt() {
			return GetRuleContexts<Using_decl_stmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Using_decl_stmtContext using_decl_stmt(int i) {
			return GetRuleContext<Using_decl_stmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Const_decl_stmtContext[] const_decl_stmt() {
			return GetRuleContexts<Const_decl_stmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Const_decl_stmtContext const_decl_stmt(int i) {
			return GetRuleContext<Const_decl_stmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Const_static_decl_stmtContext[] const_static_decl_stmt() {
			return GetRuleContexts<Const_static_decl_stmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Const_static_decl_stmtContext const_static_decl_stmt(int i) {
			return GetRuleContext<Const_static_decl_stmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_decl_stmtContext[] struct_decl_stmt() {
			return GetRuleContexts<Struct_decl_stmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_decl_stmtContext struct_decl_stmt(int i) {
			return GetRuleContext<Struct_decl_stmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Union_decl_stmtContext[] union_decl_stmt() {
			return GetRuleContexts<Union_decl_stmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Union_decl_stmtContext union_decl_stmt(int i) {
			return GetRuleContext<Union_decl_stmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Enum_decl_stmtContext[] enum_decl_stmt() {
			return GetRuleContexts<Enum_decl_stmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Enum_decl_stmtContext enum_decl_stmt(int i) {
			return GetRuleContext<Enum_decl_stmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Interface_decl_stmtContext[] interface_decl_stmt() {
			return GetRuleContexts<Interface_decl_stmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Interface_decl_stmtContext interface_decl_stmt(int i) {
			return GetRuleContext<Interface_decl_stmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Func_decl_stmtContext[] func_decl_stmt() {
			return GetRuleContexts<Func_decl_stmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Func_decl_stmtContext func_decl_stmt(int i) {
			return GetRuleContext<Func_decl_stmtContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISolidLangParserListener typedListener = listener as ISolidLangParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISolidLangParserListener typedListener = listener as ISolidLangParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 170;
			namespace_decl_stmt();
			State = 174;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==USING) {
				{
				{
				State = 171;
				using_decl_stmt();
				}
				}
				State = 176;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 186;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 760L) != 0) || _la==AT || _la==ID) {
				{
				State = 184;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
				case 1:
					{
					State = 177;
					const_decl_stmt();
					}
					break;
				case 2:
					{
					State = 178;
					const_static_decl_stmt();
					}
					break;
				case 3:
					{
					State = 179;
					struct_decl_stmt();
					}
					break;
				case 4:
					{
					State = 180;
					union_decl_stmt();
					}
					break;
				case 5:
					{
					State = 181;
					enum_decl_stmt();
					}
					break;
				case 6:
					{
					State = 182;
					interface_decl_stmt();
					}
					break;
				case 7:
					{
					State = 183;
					func_decl_stmt();
					}
					break;
				}
				}
				State = 188;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 189;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnnotationsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationContext[] annotation() {
			return GetRuleContexts<AnnotationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationContext annotation(int i) {
			return GetRuleContext<AnnotationContext>(i);
		}
		public AnnotationsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_annotations; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISolidLangParserListener typedListener = listener as ISolidLangParserListener;
			if (typedListener != null) typedListener.EnterAnnotations(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISolidLangParserListener typedListener = listener as ISolidLangParserListener;
			if (typedListener != null) typedListener.ExitAnnotations(this);
		}
	}

	[RuleVersion(0)]
	public AnnotationsContext annotations() {
		AnnotationsContext _localctx = new AnnotationsContext(Context, State);
		EnterRule(_localctx, 2, RULE_annotations);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 194;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AT) {
				{
				{
				State = 191;
				annotation();
				}
				}
				State = 196;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnnotationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AT() { return GetToken(SolidLangParser.AT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(SolidLangParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(SolidLangParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(SolidLangParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(SolidLangParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL_LITERAL() { return GetToken(SolidLangParser.BOOL_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER_LITERAL() { return GetToken(SolidLangParser.INTEGER_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT_LITERAL() { return GetToken(SolidLangParser.FLOAT_LITERAL, 0); }
		public AnnotationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_annotation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISolidLangParserListener typedListener = listener as ISolidLangParserListener;
			if (typedListener != null) typedListener.EnterAnnotation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISolidLangParserListener typedListener = listener as ISolidLangParserListener;
			if (typedListener != null) typedListener.ExitAnnotation(this);
		}
	}

	[RuleVersion(0)]
	public AnnotationContext annotation() {
		AnnotationContext _localctx = new AnnotationContext(Context, State);
		EnterRule(_localctx, 4, RULE_annotation);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 197;
			Match(AT);
			State = 198;
			Match(ID);
			State = 202;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAREN) {
				{
				State = 199;
				Match(LPAREN);
				State = 200;
				_la = TokenStream.LA(1);
				if ( !(((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & 29L) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 201;
				Match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Namespace_decl_stmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAMESPACE() { return GetToken(SolidLangParser.NAMESPACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Namespace_pathContext namespace_path() {
			return GetRuleContext<Namespace_pathContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(SolidLangParser.SEMI, 0); }
		public Namespace_decl_stmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace_decl_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISolidLangParserListener typedListener = listener as ISolidLangParserListener;
			if (typedListener != null) typedListener.EnterNamespace_decl_stmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISolidLangParserListener typedListener = listener as ISolidLangParserListener;
			if (typedListener != null) typedListener.ExitNamespace_decl_stmt(this);
		}
	}

	[RuleVersion(0)]
	public Namespace_decl_stmtContext namespace_decl_stmt() {
		Namespace_decl_stmtContext _localctx = new Namespace_decl_stmtContext(Context, State);
		EnterRule(_localctx, 6, RULE_namespace_decl_stmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 204;
			Match(NAMESPACE);
			State = 205;
			namespace_path();
			State = 206;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Namespace_pathContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(SolidLangParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(SolidLangParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SCOPE() { return GetTokens(SolidLangParser.SCOPE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SCOPE(int i) {
			return GetToken(SolidLangParser.SCOPE, i);
		}
		public Namespace_pathContext(ParserRuleContext parent, int invokingState)
